@@ -31,4 +31,5 @@ with contributions by:
     Clyde Stubbs <clyde@htsoft.com>
     Jens Maurer <Jens.Maurer@gmx.net>
     Elod Horvath <elod@itfais.com>
+    Pierre Souchay <pierre@souchay.net>
 
