@@ -1,4 +1,4 @@
-.TH darkice 1 "April 26, 2007" "DarkIce" "DarkIce live audio streamer"
+.TH darkice 1 "November 20, 2007" "DarkIce" "DarkIce live audio streamer"
 .SH NAME
 darkice \- an icecast / shoutcast live audio streamer
 .SH SYNOPSIS
@@ -105,6 +105,7 @@ Developed with contributions by
     Clyde Stubbs <clyde@htsoft.com>
     Jens Maurer <Jens.Maurer@gmx.net>
     Elod Horvath <elod@itfais.com>
+    Pierre Souchay <pierre@souchay.net>
   
 .SH LINKS
 Project homepage:
